classDiagram
    %% Structural/Data Classes (The "Pillars")
    class Building {
        -List~Floor~ floors
        +Building()
        +addFloor(Floor floor)
        +getFloor(int floorNumber) Floor
    }

    class Floor {
        -int floorNumber
        -double extraCharge
        -List~List~Spot~~ rows
        -Map~SpotType, List~Integer~~ flatSearchMap
        +Floor(int floorNumber, double extraCharge)
        +getExtraCharge() double
        +findAvailableSpot(SpotType type) Integer
        +getSpot(int spotID) Spot
        +updateSpotOccupancy(int spotID, boolean isOccupied)
    }

    class Spot {
        -int spotID
        -SpotType spotType
        -boolean isOccupied
        +Spot(int spotID, SpotType spotType)
        +getSpotID() int
        +getSpotType() SpotType
        +isOccupied() boolean
        +setOccupied(boolean occupied)
    }

    class Vehicle {
        -String licensePlate
        -VehicleType vehicleType
        +Vehicle(String licensePlate, VehicleType vehicleType)
        +getLicensePlate() String
        +getVehicleType() VehicleType
    }

    %% Enums
    class SpotType {
        <<enumeration>>
        COMPACT
        REGULAR
        LARGE
        EV
        HANDICAPPED
    }

    class VehicleType {
        <<enumeration>>
        MOTORCYCLE
        CAR
        SUV
        TRUCK
        ELECTRIC
    }

    %% Registry & Logic Classes (The "Experts")
    class PriceRegistry {
        -Map~SpotType, Double~ baseRates
        +PriceRegistry()
        +loadFromDatabase()
        +getBaseRate(SpotType spotType) Double
        +updateRate(SpotType spotType, Double rate)
    }

    class CompatibilityRegistry {
        -Map~VehicleType, List~SpotType~~ compatibilityMap
        +CompatibilityRegistry()
        +loadFromDatabase()
        +getAllowedSpotTypes(VehicleType vehicleType) List~SpotType~
        +isCompatible(VehicleType vehicleType, SpotType spotType) boolean
    }

    class EntryGate {
        -int gateID
        -Building building
        -CompatibilityRegistry compatibilityRegistry
        -PriceRegistry priceRegistry
        +EntryGate(int gateID, Building building)
        +processEntry(Vehicle vehicle) Ticket
        +findAvailableSpot(VehicleType vehicleType) Spot
        +performAtomicDBUpdate(Ticket ticket) boolean
    }

    %% Transaction & Billing Classes (The "Audit")
    class Ticket {
        -String ticketID
        -String licensePlate
        -int spotID
        -LocalDateTime entryTimestamp
        +Ticket(String licensePlate, int spotID)
        +getTicketID() String
        +getLicensePlate() String
        +getSpotID() int
        +getEntryTimestamp() LocalDateTime
    }

    class Invoice {
        -String invoiceID
        -String licensePlate
        -double basePrice
        -double floorPremium
        -double discountAmount
        -double fines
        -double totalAmount
        -LocalDateTime invoiceTimestamp
        +Invoice()
        +setBasePrice(double basePrice)
        +setFloorPremium(double floorPremium)
        +setDiscountAmount(double discountAmount)
        +setFines(double fines)
        +calculateTotal() double
        +getInvoiceID() String
        +getTotalAmount() double
    }

    class ExitGate {
        -int gateID
        -Building building
        -PriceRegistry priceRegistry
        +ExitGate(int gateID, Building building)
        +processExit(String licensePlate) Invoice
        +retrieveTicket(String licensePlate) Ticket
        +calculateBasePrice(Ticket ticket, SpotType spotType) double
        +applyDiscount(double subtotal) double
        +retrieveFines(String licensePlate) double
        +generateInvoice(Ticket ticket, double basePrice, double floorPremium, double discount, double fines) Invoice
        +commitInvoice(Invoice invoice) boolean
    }

    %% Relationships
    Building "1" *-- "many" Floor : contains
    Floor "1" *-- "many" Spot : contains
    Spot --> SpotType : uses
    Vehicle --> VehicleType : uses
    
    EntryGate --> Building : accesses
    EntryGate --> CompatibilityRegistry : uses
    EntryGate --> PriceRegistry : uses
    EntryGate ..> Ticket : creates
    EntryGate ..> Vehicle : processes
    
    ExitGate --> Building : accesses
    ExitGate --> PriceRegistry : uses
    ExitGate ..> Ticket : retrieves
    ExitGate ..> Invoice : creates
    
    Ticket --> Vehicle : references (via licensePlate)
    Ticket --> Spot : references (via spotID)
    
    Invoice --> Ticket : generated from
    
    Floor --> Spot : manages
    PriceRegistry --> SpotType : maps rates for
    CompatibilityRegistry --> VehicleType : maps compatibility for
    CompatibilityRegistry --> SpotType : maps compatibility to
